Winner logic refactoring